--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Document</title>
 </head>
 <body>
-  Hello
+  <div id="page-content">
+    <textarea></textarea>
+    <select></select>
+    <div id="button-area">
+        <h3>Theme: </h3>
+        <div class="button-row">
+          <button id="theme-toggle"></button>
+        </div>
+        <h3>Align buttons</h3>
+        <div class="button-row">
+          <button id="align-toggle"></button>
+        </div>
+    </div>
+    <button>RUN</button>
+    <pre>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Quod, provident hic dignissimos reiciendis repellat at neque 
+      corporis aliquid explicabo beatae cum? Voluptate perspiciatis 
+      possimus excepturi reiciendis quo cumque illo nemo?
+    </pre>
+  </div>
 </body>
+<script src="main.js"></script>
 </html>
